Fix contrasto testo home

--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ figcaption.centerImg {
 	background-color: var(--azz1);
 	text-align: center;
 	border: 3px solid var(--blu);
-	color: #FFF
+	color: #000
 
 }
 
